<?xml version="1.0"?>
<package>
  <name>vslam_dso</name>
  <version>0.1.0</version>
  <description>
    ROS Wrapper DSO - ROS Node
  </description>
  <author> Jakob Engel</author>
  <maintainer email="raulmur@unizar.es">Jakob Engel</maintainer>
  <license>GPLv3</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
</package>
