<?xml version="1.0"?>
<package>
  <name>vslam_okvis</name>
  <version>0.1.0</version>
  <description>
    OKVIS - ROS Nodes
  </description>
  <author>Stefan Leutenegger</author>
  <maintainer email="xxx@xx.edu"> Stefan Leutenegger</maintainer>
  <license>GPLv3</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend> <!-- for FindEigen.cmake module -->
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
 
  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
</package>
